crates/ink/tests/ui/contract/fail/message/message-selector-invalid-type-01.stderr
error: #[ink(selector = ..)] attributes with string inputs are deprecated. use an integer instead, e.g. #[ink(selector = 1)] or #[ink(selector = 0xC0DECAFE)].
  --> tests/ui/contract/fail/message/message-selector-invalid-type-01.rs:14:35
   |
14 |         #[ink(message, selector = "0xC0DECAFE")]
   |                                   ^^^^^^^^^^^^
